# warpdrive

./: .dockerignore  .gitignore  .ninja_deps  .ninja_log  Brewfile  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CTestTestfile.cmake  Dockerfile  Makefile.am  README.md  bind.cc  bind.h  build-debug.sh  build.sh  build_osx.sh  build_win32.bat  build_win64.bat  catfunc.h  cmake_install.cmake  cmake_summary.json  columninfo.cc  columninfo.h  configure.ac  connection.h  convert.cc  descriptor.h  inouealc.cc  loadlib.h  lobj.h  misc.h  multibyte.h  mylog.cc  mylog.h  odbcapi30.cc  odbcapiw.cc  psqlodbc.dsp  psqlodbc.rc  psqlodbc.sln  (+11 more)
cmake_modules/: BuildUtils.cmake  DefineOptions.cmake  FindClangTools.cmake  FindInferTools.cmake  SetupCxxFlags.cmake
docs/: config.html  release-7.3.html  release.html  win32-compilation.html
installer/psqlodbc-setup/: Bundle.wxs  psqlodbc-setup.wixproj
src/arrow-odbc/: CMakeLists.txt  arrow-odbc.def  arrow-odbc.exports  arrow-odbc.ini.in  arrow-odbc.pc.in  arrow-odbcConfig.cmake.in  main.cc  version.rc.in
src/test/: .gitignore  CMakeLists.txt  README.md  RegisterRegdsn.c  odbcini-gen.sh  reset-db.c
src/test/expected/: error-rollback.out  param-conversions_1.out  params-batch-exec.out
src/test/src/: alter-test.cc  arraybinding-test.cc  bindcol-test.cc  catalogfunctions-test.cc  colattribute-test.cc  common.cc  common.h  connect-test.cc  descriptor-test.cc  diagnostic-test.cc  hello_test.cc  hello_test2.cc  insertreturning-test.cc  large-object-data-at-exec-test.cc  large-object-test.cc  multithreading-test.cc  prepare-test.cc  result-conversions-test.cc  result-set-metadata-test.cc  select-test.cc  statement-functions-test.cc  stmthandles-test.cc  update-test.cc  wchar-char-test-utf8.cc  wchar-char-test.cc
src/test/src/convert/: convert.py  output.cc  result-conversions.out
src/test/src/incomplete/: alter-test.cc  arraybinding-test.cc  bulkoperations-test.cc  commands-test.cc  connect-test.cc  cte-test.cc  cursor-block-delete-test.cc  cursors-test.cc  cvtnulldate-test.cc  dataatexecution-test.cc  declare-fetch-block-test.cc  declare-fetch-commit-test.cc  deprecated-test.cc  error-rollback-test.cc  errors-test.cc  fetch-refcursors-test.cc  getresult-test.cc  identity-test.cc  insertreturning-test.cc  large-object-data-at-exec-test.cc  large-object-test.cc  lfconversion-test.cc  multistmt-test.cc  notice-test.cc  numeric-test.cc  odbc-escapes-test.cc  param-conversions-test.cc  params-batch-exec-test.cc  params-test.cc  parse-test.cc  positioned-update-test.cc  premature-test.cc  prepare-test.cc  quotes-test.cc  stmthandles-test.cc  update-test.cc  wchar-char-test-utf8.cc  wchar-char-test.cc
src/test/src/unneeded/: bookmark-test.cc  boolsaschar-test.cc  cursor-commit-test.cc  cursor-movement-test.cc  cursor-name-test.cc  wchar-char-test-eucjp.cc  wchar-char-test-sjis.cc
src/warpdrive/: AttributeUtils.h  CMakeLists.txt  EncodingUtils.h  ODBCConnection.cc  ODBCConnection.h  ODBCDescriptor.cc  ODBCDescriptor.h  ODBCEnvironment.cc  ODBCEnvironment.h  ODBCHandle.h  ODBCStatement.cc  ODBCStatement.h  TypeUtilities.h  WarpdriveOptions.cmake  bind.cc  bind.h  c_ptr.h  catfunc.h  columninfo.cc  columninfo.h  connection.cc  connection.h  connexp.h  convert.cc  convert.h  descriptor.cc  descriptor.h  dlg_specific.cc  dlg_specific.h  dlg_wingui.cc  drvconn.cc  environ.cc  environ.h  execute.cc  info.cc  inouealc.cc  loadlib.cc  loadlib.h  lobj.cc  lobj.h  (+44 more)
test/expected/: catalogfunctions.out  catalogfunctions_1.out
test/src/: diagnostic-test.c  parse-test.c  result-conversions-test.c
winbuild/: BuildAll.ps1  configuration_template.xml  pgenlist.vcxproj  platformbuild.vcxproj  psqlodbc.Cpp.props  psqlodbc.vcxproj  psqlsetup.vcxproj  readme.txt  regress_one.vcxproj
